Update mobile styling for text box and fix bug causing character-overlay not to show on mobile

--- a/css/canvas-text-boxes.css
+++ b/css/canvas-text-boxes.css
@@ -35,8 +35,9 @@
     right: 0;
     bottom: 0;
     top: unset;
+    position: relative;
     padding: 5px 10px 20px 50px;
-    margin: 8px;
+    margin: -30px 8px 8px;
     font-size: 19px;
     display: flex;
     align-items: center;
